# Web-CSV-Analyzer

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
