[project]
name = "Web CSV Analyzer"
version = "0.1.0"
description = "A web-based tool for uploading, exploring, cleaning, and analyzing CSV data through an interactive interface."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.26.0",
    "google-generativeai>=0.8.5",
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "streamlit>=1.47.0",
]
