[project]
name = "Web_CSV_Analyzer"
version = "0.1.0"
description = "A web-based tool for uploading, exploring, cleaning, and analyzing CSV data through an interactive interface."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "dotenv>=0.9.9",
    "fonttools==4.58.2",
    "google-genai>=1.26.0",
    "google-generativeai>=0.8.5",
    "imbalanced-learn==0.13.0",
    "joblib==1.5.1",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.3",
    "notebook>=7.4.4",
    "numpy==2.3.0",
    "packaging==25.0",
    "pandas>=2.3.1",
    "pillow==11.2.1",
    "plotly>=6.2.0",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "seaborn>=0.13.2",
    "six==1.17.0",
    "sklearn-compat==0.1.3",
    "streamlit>=1.47.0",
    "threadpoolctl==3.6.0",
    "uv==0.7.12",
]
